--- a/src/views/index.html
+++ b/src/views/index.html
@@ -65,11 +65,12 @@
 	<meta name="twitter:description" content="">
 	<meta name="twitter:image:src" content="">
 
-	<!-- Social: Google+ / Schema.org  -->
+	<!-- Social Google+  -->
 	<link rel="author" href="google plus do autor">
 	<meta itemprop="name" content="Título da página">
 	<meta itemprop="description" content="Pequena descrição">
 	<meta itemprop="image" content="imagem da página">
+
 	<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
@@ -91,7 +92,7 @@
 	</header>
 	
 	<!-- Content -->
-	<main role="main">
+	<main>
 
 		<article>
 		   <header>
@@ -161,15 +162,15 @@
 
 	<!-- Main Footer --> 
 	<footer> 
-      <nav>
-          <ul>
-              <li><a href="inicio.html">Início</a></li>
-              <li><a href="quem-somos.html">Quem somos</a></li>
-              <li><a href="servicos.html">Serviços</a></li>
-              <li><a href="contato.html">Contato</a></li>
-          </ul>
-      </nav> 
-      <small>Copyright © 2011 - Todos os direitos reservados</small>
+		<nav>
+			<ul>
+			  <li><a href="inicio.html">Início</a></li>
+			  <li><a href="quem-somos.html">Quem somos</a></li>
+			  <li><a href="servicos.html">Serviços</a></li>
+			  <li><a href="contato.html">Contato</a></li>
+			</ul>
+		</nav> 
+		<small>Copyright © 2011 - Todos os direitos reservados</small>
   	</footer>
 
 
@@ -204,7 +205,7 @@
 	   }(document, 'script', 'facebook-jssdk'));
 	</script>
 
-   <!-- Google Api-->
+    <!-- Google Api-->
 	<script src="https://apis.google.com/js/platform.js" async defer>
 	  {lang: 'pt-BR'}
 	</script>
