--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,7 +27,7 @@
 	<meta http-equiv="refresh" content="180;URL=" />
 	<link rel="chrome-webstore-item" href="">
 	<link rel="icon" href="" />
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./css/main.css">
 	<link rel="canonical" href="http://tableless.com.br/tudo-que-voce-precisa-saber-sobre-sitemaps/" />
 	<link rel="alternate" type="application/rss+xml" title="Feed de notícias" href="/feed">
 	<link rel="publisher" href="https://plus.google.com/+tableless/posts"/>
