--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,1 +1,12 @@
-footer.html
+	<!-- Main Footer --> 
+	<footer> 
+		<nav>
+			<ul>
+			  <li><a href="inicio.html">Início</a></li>
+			  <li><a href="quem-somos.html">Quem somos</a></li>
+			  <li><a href="servicos.html">Serviços</a></li>
+			  <li><a href="contato.html">Contato</a></li>
+			</ul>
+		</nav> 
+		<small>Copyright © 2011 - Todos os direitos reservados</small>
+  	</footer>
