--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,1 +1,15 @@
-header.html
+	<!-- Main Header -->
+	<header>
+		<img alt="logo" src="/img/logo.png">
+   		<h1>Entendo a estrutura e semântica do HTML5</h1>
+		
+		<!-- Menu -->
+	    <nav>
+	        <ul>
+	           <li><a href="inicio.html">Início</a></li>
+	           <li><a href="quem-somos.html">Quem somos</a></li>
+	           <li><a href="servicos.html">Serviços</a></li>
+	           <li><a href="contato.html">Contato</a></li>
+	       </ul>
+	    </nav>
+	</header>
