--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,8 +14,8 @@
 	<meta name="generator" content="" />
 	<meta name="location" content="Sao Paulo, Brazil" />
 	<meta name="google-site-verification" content="" />
-	<meta name="msvalidate.01" content="" />
-	<meta name="theme-color" content="#FF7F00">
+	<meta name="msvalidate.01" content="" /> <!-- verification bing -->
+	<meta name="theme-color" content="#FF7F00"> <!-- color theme mobile browser -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="distribution" content="Global" />
 	<meta name="category" content="Deportes" />
@@ -28,6 +28,7 @@
 	<link rel="chrome-webstore-item" href="">
 	<link rel="icon" href="" />
 	<link rel="stylesheet" href="./css/main.css">
+	<!--
 	<link rel="canonical" href="http://tableless.com.br/tudo-que-voce-precisa-saber-sobre-sitemaps/" />
 	<link rel="alternate" type="application/rss+xml" title="Feed de notícias" href="/feed">
 	<link rel="publisher" href="https://plus.google.com/+tableless/posts"/>
@@ -35,6 +36,7 @@
 	<link rel="start" title="Primeiro Post do Blog" href="http://enderecodoblog.com.br/primeiro">
 	<link rel="prev" title="Post Anterior" href="http://enderecodoblog.com.br/anterior">
 	<link rel="next" title="Próximo Post" href="http://enderecodoblog.com.br/proximo">
+	-->
 
 	<!--Meta Facebook-->
 	<meta property="fb:admins" content="id do seu fb insight">
