--- a/src/views/index.html
+++ b/src/views/index.html
@@ -92,6 +92,33 @@
 	       </ul>
 	    </nav>
 	</header>
+
+
+
+
+
+	<div class="grid grid-pad">
+			<div class="col-1-2 mobile-col-1-2">
+				<div class="content">aaaaaaaaaaaaa
+				</div>
+			</div>
+			<div class="col-1-2 mobile-col-1-2">
+				<div class="content">bbbbbbbbbbbbb
+				</div>
+			</div>
+			
+			<div class="col-1-2 mobile-col-1-1">
+				<div class="content">cccccccccccc
+				</div>
+			</div>
+			<div class="col-1-2 mobile-col-1-2 hide-on-mobile">
+				<div class="content">dddddddddddd
+				</div>
+			</div>
+		</div>
+
+
+
 	
 	<!-- Content -->
 	<main>
