--- a/src/views/index.html
+++ b/src/views/index.html
@@ -77,26 +77,8 @@
 </head>
 <body>
 
-	<!-- Main Header -->
-	<header>
-		<img alt="logo" src="/img/logo.png">
-   		<h1>Entendo a estrutura e semântica do HTML5</h1>
-		
-		<!-- Menu -->
-	    <nav>
-	        <ul>
-	           <li><a href="inicio.html">Início</a></li>
-	           <li><a href="quem-somos.html">Quem somos</a></li>
-	           <li><a href="servicos.html">Serviços</a></li>
-	           <li><a href="contato.html">Contato</a></li>
-	       </ul>
-	    </nav>
-	</header>
 
-
-
-
-
+	<!-- Basic Grid -->
 	<div class="grid grid-pad">
 		<div class="col-1-2 mobile-col-1-2">
 			<div class="content">aaaaaaaaaaaaa
@@ -118,6 +100,22 @@
 	</div>
 
 
+
+	<!-- Main Header -->
+	<header>
+		<img alt="logo" src="/img/logo.png">
+   		<h1>Entendo a estrutura e semântica do HTML5</h1>
+		
+		<!-- Menu -->
+	    <nav>
+	        <ul>
+	           <li><a href="inicio.html">Início</a></li>
+	           <li><a href="quem-somos.html">Quem somos</a></li>
+	           <li><a href="servicos.html">Serviços</a></li>
+	           <li><a href="contato.html">Contato</a></li>
+	       </ul>
+	    </nav>
+	</header>
 
 	
 	<!-- Content -->
