--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,3 +1,43 @@
 header{
 	background: green;
 }
+
+
+
+
+
+
+.ws-icon-bg {
+	background: #5cbe4a;
+	height: 37px;
+	margin: 0 0 -37px 0;
+	width: 100%; 
+	float: left;
+}
+
+.ws-icon-bg:after {
+  content: url(http://localhost/arquibancada/public/imagens/site/whatsapp.png);
+  display: block;
+  padding: 9px 10px 5px 15px;
+}
+
+.ws-bg {
+	background: #5cbe4a;
+	display: block;
+	height: 37px;
+	margin: 0 0 0px 41px;
+	 
+	float: left;
+}
+
+.ws-bg:after {
+	color: #fff;
+	content: "compartilhar no Whatsapp";
+	font-family: 'Oswald', sans-serif;
+	height: 37px;
+	left: 8%;
+	position: relative;
+	text-transform: uppercase;
+	top: 22%;
+	width: 100%; 
+}
