--- a/src/views/index.html
+++ b/src/views/index.html
@@ -78,29 +78,6 @@
 <body>
 
 
-	<!-- Basic Grid -->
-	<div class="grid grid-pad">
-		<div class="col-1-2 mobile-col-1-2">
-			<div class="content">aaaaaaaaaaaaa
-			</div>
-		</div>
-		<div class="col-1-2 mobile-col-1-2">
-			<div class="content">bbbbbbbbbbbbb
-			</div>
-		</div>
-		
-		<div class="col-1-2 mobile-col-1-1">
-			<div class="content">cccccccccccc
-			</div>
-		</div>
-		<div class="col-1-2 mobile-col-1-2 hide-on-mobile">
-			<div class="content">dddddddddddd
-			</div>
-		</div>
-	</div>
-
-
-
 	<!-- Main Header -->
 	<header>
 		<img alt="logo" src="/img/logo.png">
@@ -112,80 +89,12 @@
 	           <li><a href="inicio.html">Início</a></li>
 	           <li><a href="quem-somos.html">Quem somos</a></li>
 	           <li><a href="servicos.html">Serviços</a></li>
-	           <li><a href="contato.html">Contato</a></li>
+	           <li><a href="contato.html">Contato teste</a></li>
 	       </ul>
 	    </nav>
 	</header>
 
-	
-	<!-- Content -->
-	<main>
 
-		<article>
-		   <header>
-		       <h1>Entendendo o elemento Article</h1>
-		       <p>Publicado em <time pubdate datetime="2011-09-01">01 de Setembro de 2011</time></p>
-		   </header>
-		   ...conteúdo...
-		   <footer>
-		       <small>© Todos os direitos reservados.</small>
-		   </footer>
-		</article>
-	 
-		<section>
-		    <article>
-		        <header>
-		            <h2>O título do artigo é aqui</h2>
-		            <p>Publicado em <time datetime="2015-03-09T13:00:24+01:00">09 de Março de 2015</time> por <a href="#">Author</a> - <a href="#comments">30 comentários</a></p>
-		        </header>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		    </article>
-	 
-		    <article>
-		        <header>
-		            <h2>O título do artigo é aqui</h2>
-		            <p>Publicado em <time datetime="2015-03-09T13:00:24+01:00">09 de Março de 2015</time> por <a href="#">Author</a> - <a href="#comments">15 comentários</a></p>
-		        </header>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		    </article>
-		</section>
-
-		<article role="article" itemscope itemtype="http://schema.org/BlogPosting">
-			<header>
-				<h2 itemprop="headline">
-					<a href="#" itemprop="url">
-						Título do artigo
-					</a>
-				</h2>
-			</header>
-			
-			<!-- Data da publicação -->
-			<time itemprop="datePublished" datetime="2014-07-14">Segunda-feira, 14 de Julho de 2014</time>
-			
-			<!-- Imagem em destaque (Opcional) -->
-			<img src="exemplo.jpg" alt="Nome da imagem" itemprop="image" />
-			
-			<!-- Descrição (Opcional) -->
-			<div itemprop="description">Descrição do artigo.</div>
-			
-			<!-- Texto HTML do artigo -->
-			<div class="post" itemprop="articleBody">O HTML do artigo vem aqui.</div>
-			
-			<!-- Sessão do autor -->
-			<footer itemprop="author" itemscope itemtype="http://schema.org/Person">
-				<h3 itemprop="name">Nome do autor</h3>
-				<p itemprop="description">Biografia do autor.</p>
-			</footer>
-		</article> <!-- Fim do primeiro artigo -->
-
-	</main>
-	<!-- Content -->
-	
-	<!-- Sidebar -->
-	<aside>
-	    <h2>Entre em contato</h2>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	</aside>
 
 	<!-- Main Footer --> 
 	<footer> 
